--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,41 @@
 <html>
 <head>
   <title>Blocmetrics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <li><%= link_to "Home", home_index_path %></li>
+   			<li><%= link_to "About", home_about_path %></li>
+
+        <div class="pull-right-user-info">
+
+          <% if user_signed_in? %>
+            <div class="pull-right">
+              <ul class="nav nav-tabs", style="border-bottom:0px;">
+                <li class="username">Signed in as: <strong><%= current_user.email %></strong></li>
+                <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %></li>
+              </ul>
+            </div>
+
+          <% else %>
+            <div class="pull-right">
+              <ul class="nav nav-tabs", style="border-bottom:0px;">
+                <li><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link' %></li>
+                <li><%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %></li>
+              </ul>
+            </div>
+
+          <% end %>
+
+        </div>
+      </ul>
+    </div>
 
 <%= yield %>
 
