fixed some things up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
-@import "boostrap-sprockets";
+@import "bootstrap-sprockets";
 @import "bootstrap";
 
-.username [
+.username {
   position: relative;
   display: block;
   padding: 10px 15px;
-]
+}
