--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
     <div class="container">
       <ul class="nav nav-tabs">
         <li><%= link_to "Home", home_index_path %></li>
-   			<li><%= link_to "About", home_about_path %></li>
+
+        <% if user_signed_in? %>
+          <li><%= link_to "My Apps", registeredapps_path %></li>
+        <% end %>
 
         <div class="pull-right-user-info">
 
