--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 <body>
     <div class="container">
       <ul class="nav nav-tabs">
-        <li><%= link_to "Home", home_index_path %></li> 
+        <li><%= link_to "Home", home_index_path %></li>
+
+        <% if user_signed_in? %>
+          <li><%= link_to "My Apps", registeredapps_path %></li>
+        <% end %>
 
         <div class="pull-right-user-info">
 
